2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PiePlot.java
    (equals): Updated for labelLinkStyle field.

2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1891849 by Martin Hilpert:
    * source/org/jfree/chart/plot/PieLabelLinkStyle.java: New file,
    * source/org/jfree/chart/plot/PiePlot.java
    (labelLinkStyle): New field,
    (getLabelLinkStyle): New method,
    (setLabelLinkStyle): Likewise,
    (drawLeftLabel): Added support for labelLinkStyle field,
    (drawRightLabel): Likewise.
    
2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PieLabelDistributor.java
    (distributeLabels): Comment out adjustInwards() until it is working,
    (adjustDownwards): Fix check for lower bound,
    (adjustUpwards): Fix check for upper bound,
    (distributeEvenly): Allow overlapping rather than exceeding bounds.
    
2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PiePlot.java
    (drawLeftLabels): Adjust label area for interiorGap,
    (drawRightLabels): Likewise.

2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/labels/HighLowItemLabelGenerator.java:
    (hashCode): Implemented,
    * source/org/jfree/chart/labels/MultipleXYSeriesLabelGenerator.java: 
    Likewise,
    * source/org/jfree/chart/labels/StandardCategorySeriesLabelGenerator.java:
    Likewise,
    * source/org/jfree/chart/labels/StandardXYSeriesLabelGenerator.java:
    Likewise,
    * source/org/jfree/chart/labels/SymbolicXYItemLabelGenerator.java:
    Likewise.

2008-03-31  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CombinedDomainCategoryPlot.java
    (getSubplots): Return null if this.subplots is null,
    * source/org/jfree/chart/plot/CombinedDomainXYPlot.java: Likewise,